y.output
Grammar

    0 $accept: sentencia $end

    1 sentencia: asignacion

    2 asignacion: ID OP_AS expresion

    3 expresion: termino
    4          | expresion OP_SUM termino
    5          | expresion OP_RES termino

    6 termino: factor
    7        | termino OP_MUL factor
    8        | termino OP_DIV factor

    9 factor: ID
   10       | CTE
   11       | PA expresion PC


Terminals, with rules where they appear

$end (0) 0
error (256)
CTE (258) 10
ID (259) 2 9
OP_AS (260) 2
OP_SUM (261) 4
OP_MUL (262) 7
OP_RES (263) 5
OP_DIV (264) 8
PA (265) 11
PC (266) 11


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
sentencia (13)
    on left: 1, on right: 0
asignacion (14)
    on left: 2, on right: 1
expresion (15)
    on left: 3 4 5, on right: 2 4 5 11
termino (16)
    on left: 6 7 8, on right: 3 4 5 7 8
factor (17)
    on left: 9 10 11, on right: 6 7 8


state 0

    0 $accept: . sentencia $end

    ID  shift, and go to state 1

    sentencia   go to state 2
    asignacion  go to state 3


state 1

    2 asignacion: ID . OP_AS expresion

    OP_AS  shift, and go to state 4


state 2

    0 $accept: sentencia . $end

    $end  shift, and go to state 5


state 3

    1 sentencia: asignacion .

    $default  reduce using rule 1 (sentencia)


state 4

    2 asignacion: ID OP_AS . expresion

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    expresion  go to state 9
    termino    go to state 10
    factor     go to state 11


state 5

    0 $accept: sentencia $end .

    $default  accept


state 6

   10 factor: CTE .

    $default  reduce using rule 10 (factor)


state 7

    9 factor: ID .

    $default  reduce using rule 9 (factor)


state 8

   11 factor: PA . expresion PC

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    expresion  go to state 12
    termino    go to state 10
    factor     go to state 11


state 9

    2 asignacion: ID OP_AS expresion .
    4 expresion: expresion . OP_SUM termino
    5          | expresion . OP_RES termino

    OP_SUM  shift, and go to state 13
    OP_RES  shift, and go to state 14

    $default  reduce using rule 2 (asignacion)


state 10

    3 expresion: termino .
    7 termino: termino . OP_MUL factor
    8        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 3 (expresion)


state 11

    6 termino: factor .

    $default  reduce using rule 6 (termino)


state 12

    4 expresion: expresion . OP_SUM termino
    5          | expresion . OP_RES termino
   11 factor: PA expresion . PC

    OP_SUM  shift, and go to state 13
    OP_RES  shift, and go to state 14
    PC      shift, and go to state 17


state 13

    4 expresion: expresion OP_SUM . termino

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    termino  go to state 18
    factor   go to state 11


state 14

    5 expresion: expresion OP_RES . termino

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    termino  go to state 19
    factor   go to state 11


state 15

    7 termino: termino OP_MUL . factor

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    factor  go to state 20


state 16

    8 termino: termino OP_DIV . factor

    CTE  shift, and go to state 6
    ID   shift, and go to state 7
    PA   shift, and go to state 8

    factor  go to state 21


state 17

   11 factor: PA expresion PC .

    $default  reduce using rule 11 (factor)


state 18

    4 expresion: expresion OP_SUM termino .
    7 termino: termino . OP_MUL factor
    8        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 4 (expresion)


state 19

    5 expresion: expresion OP_RES termino .
    7 termino: termino . OP_MUL factor
    8        | termino . OP_DIV factor

    OP_MUL  shift, and go to state 15
    OP_DIV  shift, and go to state 16

    $default  reduce using rule 5 (expresion)


state 20

    7 termino: termino OP_MUL factor .

    $default  reduce using rule 7 (termino)


state 21

    8 termino: termino OP_DIV factor .

    $default  reduce using rule 8 (termino)
